Bug 171869 - [26.8 CJK PDF] Exporting to PDF, CJK texts display as squares
Summary: [26.8 CJK PDF] Exporting to PDF, CJK texts display as squares
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: high major
Assignee: Khaled Hosny
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2026-04-26 08:17 UTC by nobu
Modified: 2026-04-30 11:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample PDF (18.67 KB, application/pdf)
2026-04-26 08:18 UTC, nobu
Details
Sample odt (11.18 KB, application/vnd.oasis.opendocument.text)
2026-04-26 08:18 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2026-04-26 08:17:26 UTC
Description:
Exporting to PDF, CJK texts display as squares.

Steps to Reproduce:
1. Open new Writer.
2. Insert Text "Kanji 漢字 かんじ" .
3. Export to PDF.
4. See PDF file.

Actual Results:
5. "漢字" & "かんじ" are squares.

Expected Results:
5. Displays the same text as Writer.


Reproducible: Always


User Profile Reset: No

Additional Info:

Same applies to Calc.

Reproducible in
[2026-04-23]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 1f2e58addafbb9bcd9b27043a4782d46d09b0961
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Reproducible in
[2026-04-21]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 5a9c1e40b55e6e2acc426a27f6cfa14bac573a87
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

---
Not reproducible in
[2026-04-11]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 2a9261371484176304b488c05fe27717fddcfc2b
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Not reproducible in
Version: 26.2.3.1 (X86_64)
Build ID: d444ea7836163cb762d1627df3bc33e112fa142a
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

Not reproducible in
[2026-03-31]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: a61d82dc9182bdbcd28704cede76d6175e1d0620
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 1 nobu 2026-04-26 08:18:19 UTC
Created attachment 206816 [details]
Sample PDF
Comment 2 nobu 2026-04-26 08:18:39 UTC
Created attachment 206817 [details]
Sample odt
Comment 3 Saburo 2026-04-26 10:13:19 UTC
not repro on bibisect win64-26.8 current master
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 05f7513a5fec87296cfac298f5fd3bfd0e0fc4bb
CPU threads: 12; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 4 Takenori Yasuda 2026-04-26 11:16:54 UTC
Reproduced not only in Writer and Calc but also in Impress and Draw.

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 1f2e58addafbb9bcd9b27043a4782d46d09b0961
CPU threads: 8; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 5 Saburo 2026-04-27 10:36:32 UTC
Reproduce on bibisect-linux-64-26.8 6076ca0fdec7d49722a13e30a5058d0f09a6ef59 is the first bad commit

commit d9a6a3f7f04d3eae1b97697d82b009905f4c4ba6	[log]
author	Khaled Hosny
vcl: embed fonts with CFF table as OpenType fonts

Instead of converting the CFF table to Type1 font, embed the full font
as OpenType (SFNT with CFF table).

Also for such fonts, add an /Encoding dictionary with /Differences array
to the PDF font dictionary, mapping character codes to CFF glyph names,
which seems to be needed by some PDF viewers.

***
adding CC: Khaled Hosny
Please, take a look?
Comment 6 Commit Notification 2026-04-30 11:10:03 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c3c87e79d12388cda1a8ebd13b9724da89afac2

tdf#171869 vcl: restore Type1 PFB conversion for CFF fonts

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.