tdf#171869 vcl: embed CFF as bare CFF via composite Type 0 (HB 14.3.0+)

With HarfBuzz 14.3.0, the new HB_SUBSET_FLAGS_CFF_IDENTITY_CHARSET flag
makes the subsetter emit an identity charset (CID = new GID) for
CID-keyed CFF input, removing the need for any CFF table parsing on
our side.

When this flag is available (HB_VERSION_ATLEAST(14, 3, 0)), embed the
bare CFF byte-for-byte as the FontFile3 stream of a CIDFontType0
descendant under a Type 0 wrapper, with an identity 1-byte CMap. With
older HarfBuzz, fall back to the Type 1 PFB conversion.

Bundles a local HarfBuzz patch (cff-identity-charset.patch.1) that
introduces HB_SUBSET_FLAGS_CFF_IDENTITY_CHARSET and bumps the bundled
HarfBuzz version to 14.3.0. The patch will be dropped once an upstream
HarfBuzz release includes it.

Also updates testTdf155161 to look at Type 0 wrappers instead of the
Type 1 simple font dict it used to check.

Change-Id: Idc62d8e1f0a8e5fb45f5e7f31e8f72c1d9b6a3a7